apps/nginx/base/route-nginx.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx-noroot
  annotations:
    link.argocd.argoproj.io/external-link: http://nginx-noroot.apps-crc.testing
  name: nginx-noroot
spec:
  host: "nginx-noroot.apps-crc.testing"
  to:
    kind: Service
    name: nginx-noroot
